src/core/snapshots/tailcall__core__error__tests__title_trace_caused_by.snap
---
source: src/core/error.rs
expression: error.to_string()
---
Configuration Error
Caused by:
  • Base URL needs to be specified [at User.posts.@http.baseURL]
