src/core/snapshots/tailcall__core__error__tests__title_trace_multiple_caused_by.snap
---
source: src/core/error.rs
expression: error.to_string()
---
Configuration Error
Caused by:
  • Base URL needs to be specified [at User.posts.@http.baseURL]
  • Base URL needs to be specified [at Post.users.@http.baseURL]
  • Base URL needs to be specified: Set `baseURL` in @http or @server directives [at Query.users.@http.baseURL]
  • Base URL needs to be specified [at Query.posts.@http.baseURL]
